IHM - Angular (from http://g00glen00b.be/prototyping-spring-boot-angularjs/)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
 <body ng-app="myApp">
 <div class="container" ng-controller="AppController">
     <div class="page-header">
-        <h1>A checklist</h1>
+        <h1>Checklist</h1>
     </div>
     <div class="alert alert-info" role="alert" ng-hide="items && items.length > 0">
         There are no items yet.
